<resources>
    <string name="app_name">Votemeal</string>
    <string name="login_button">Sign In</string>
    <string name="signout_button">Sign Out</string>
    <string name="title_activity_main">Votemeal</string>
    <string name="tab_vote">Vote</string>
    <string name="tab_results">Results</string>
    <string name="tab_predictions">Predictions</string>
    <string name="login_message">Please sign in to vote and view results</string>
    <string name="failed_login_message">Your face was not recognised.  Please try again.</string>
    <string name="login_warning">Note: The app will take your photo once you click "Sign in"</string>
    <string name="no_camera">A camera and storage permissions are required to use this app</string>
    <string name="photo_confirmation">Would you like to use this photo for sign-in?</string>
    <string name="welcome">Welcome to Votemeal, %1$s!"</string>
    <string name="ask_to_vote">Please select the political votedFor that you would like to vote for.</string>
    <string name="party_name_conservatives">Conservatives</string>
    <string name="party_name_and_votes_conservatives">Conservatives (%1$d)</string>
    <string name="party_name_labour">Labour</string>
    <string name="party_name_and_votes_labour">Labour (%1$d)</string>
    <string name="party_name_libdems">Liberal Democrats</string>
    <string name="party_name_and_votes_libdems">Liberal Democrats (%1$d)</string>
    <string name="party_name_green">Green Party</string>
    <string name="party_name_and_votes_greens">Green Party (%1$d)</string>
    <string name="party_name_ukip">UKIP</string>
    <string name="party_name_and_votes_ukip">UKIP (%1$d)</string>
    <string name="already_voted">Thank you for completing your vote.  Please click below to logout, or navigate to another tab to view userDetails and prediction information.</string>
    <string name="you_voted">You voted for:</string>
    <string name="champion">You are officially a champion of democracy!</string>
    <string name="results_welcome">The results so far are:</string>
    <string name="total_votes">Total votes: %1$d</string>
    <string name="predictions_welcome">Predictions based on your provided photo:</string>
    <string name="gender_prediction">Gender: %1$s</string>
    <string name="age_prediction">Age: %1$d</string>
    <string name="party_prediction">Vote for: %1$s</string>
    <string name="party_please_vote">Please vote to compare against your predicted party!</string>
    <string name="prediction_correct">Correct prediction!</string>
    <string name="prediction_incorrect">Incorrect prediction</string>
    <string name="breakdown_intro">Here is a breakdown of how likely you are to vote for each party:</string>
    <string name="party_name_and_percentage_conservatives">Conservatives (%1$d)%%</string>
    <string name="party_name_and_percentage_labour">Labour (%1$d)%%</string>
    <string name="party_name_and_percentage_libdems">Liberal Democrats (%1$d)%%</string>
    <string name="party_name_and_percentage_greens">Green Party (%1$d)%%</string>
    <string name="party_name_and_percentage_ukip">UKIP (%1$d)%%</string>
</resources>
