<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bmtdsl.votemeal.VotedFragment"
    android:id="@+id/votedcontainer"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/already_voted"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:text="@string/already_voted"
        android:textAlignment="center"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <Button
        android:id="@+id/signout_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/signout_button"
        android:layout_below="@+id/already_voted"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/youvoted_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:text="@string/you_voted"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/champion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="casual"
        android:text="@string/champion"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_below="@+id/party_result_view"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@mipmap/i_voted"
        android:layout_below="@+id/champion"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/party_result_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/youvoted_view"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold" />


</RelativeLayout>
