<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bmtdsl.votemeal.LoginActivity">

    <Button
        android:id="@+id/signin_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:onClick="signIn"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintVertical_bias="0.669" />

    <TextView
        android:id="@+id/signin_message"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_message"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/signin_button"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_icon_view"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/app_icon_view"
        android:layout_width="307dp"
        android:layout_height="217dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/signin_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178"
        app:srcCompat="@mipmap/votemeal"
        app:layout_constraintHorizontal_bias="0.488" />

    <TextView
        android:id="@+id/signin_warning"
        android:layout_width="226dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_warning"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_button"
        app:layout_constraintVertical_bias="0.203" />
</android.support.constraint.ConstraintLayout>
