<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--&gt;-->
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bmtdsl.votemeal.PredictionsFragment"
    android:id="@+id/predictionscontainer"
    android:weightSum="1"
    android:orientation="vertical">

        <TextView
            android:id="@+id/predictions_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/predictions_welcome"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/gender_prediction_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:text="Dummy text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintHorizontal_bias="0.701"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/party_prediction_view"
        app:layout_constraintRight_toLeftOf="@+id/age_prediction_view"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/predictions_welcome"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/age_prediction_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="Dummy text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/predictions_welcome"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/party_prediction_view"
        app:layout_constraintVertical_bias="0.7"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.713" />

    <TextView
        android:id="@+id/party_prediction_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="53dp"
        android:text="@string/party_please_vote"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/predictions_welcome"
        app:layout_constraintHorizontal_bias="0.512" />

    <ImageView
        android:id="@+id/prediction_correct_image"
        android:layout_width="32dp"
        android:layout_height="34dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/prediction_correct_view"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/party_prediction_view" />

    <TextView
        android:id="@+id/prediction_correct_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="119dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/party_prediction_view" />

    <TextView
        android:id="@+id/breakdown_intro"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="77dp"
        android:text="@string/breakdown_intro"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/party_prediction_view" />

    <ProgressBar
        android:id="@+id/conservativesPredictionBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/breakdown_intro"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/conservativesPredictionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/conservativesPredictionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakdown_intro"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/labourPredictionBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/conservativesPredictionBar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/labourPredictionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/labourPredictionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conservativesPredictionBar"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/libdemsPredictionBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/labourPredictionBar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/libdemsPredictionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/libdemsPredictionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labourPredictionBar"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/greensPredictionBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/libdemsPredictionBar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/greensPredictionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/greensPredictionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/libdemsPredictionBar"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/ukipPredictionBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/greensPredictionBar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/ukipPredictionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ukipPredictionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greensPredictionBar" />


</android.support.constraint.ConstraintLayout>
<!--</ScrollView>-->